ENH: Update infrastructure (sealed secrets)
This update incudes removal of unnecessary overlays and add a new
application for bitnami sealed secrets

--- a/argo-workflows/base/kustomization.yaml
+++ b/argo-workflows/base/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
 - github.com/argoproj/argo-workflows/manifests/cluster-install
 - namespace.yaml
 - templates.yaml
-namespace: argo
+namespace: argocd
