--- a/systole-infrastructure-development.yaml
+++ b/systole-infrastructure-development.yaml
@@ -63,3 +63,25 @@ spec:
       prune: true
     syncOptions:
     - CreateNamespace=true
+
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: test1
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/SystoleOS/infrastructure
+    targetRevision: HEAD
+    path: workflows/testing/test1/base
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: testing
+  syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
+    syncOptions:
+    - CreateNamespace=true
